src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Core_Activity_Types__c</fullName>
        <description>Activity Types that are part of the campaign.  When tasks are automatically generated, the targeted accounts will get a task for each Activity Type.</description>
        <inlineHelpText>Activity Types that are part of the campaign.  When tasks are automatically generated, the targeted accounts will get a task for each Activity Type.</inlineHelpText>
        <label>Activity Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Promotion</fullName>
                </value>
                <value>
                    <fullName>Recommendation</fullName>
                </value>
                <value>
                    <fullName>Profiling/Survey</fullName>
                </value>
                <value>
                    <fullName>Membership</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Core_Approval_Status__c</fullName>
        <description>Approval Status of the campaign.  Automatically updated when submitted and approved/rejected.</description>
        <inlineHelpText>Approval Status of the campaign.  Automatically updated when submitted and approved/rejected.</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Core_Campaign_Approval_Field_ID__c</fullName>
        <description>Campaign Approval ID</description>
        <formula>$Label.Core_Campaign_Approval_Field</formula>
        <label>Campaign Approval Field ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Campaign_Focus__c</fullName>
        <description>Focus area for the sales campaign.</description>
        <inlineHelpText>Focus area for the sales campaign.</inlineHelpText>
        <label>Campaign Focus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Desktop</fullName>
                </value>
                <value>
                    <fullName>Membership Renewal</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Netbook</fullName>
                </value>
                <value>
                    <fullName>Networking</fullName>
                </value>
                <value>
                    <fullName>Notebook</fullName>
                </value>
                <value>
                    <fullName>Other - Compute</fullName>
                </value>
                <value>
                    <fullName>Other - Embedded</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Profile Update</fullName>
                </value>
                <value>
                    <fullName>Server</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
                <value>
                    <fullName>Tablet</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Wearables</fullName>
                </value>
                <value>
                    <fullName>Workstation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Core_Campaign_Priority__c</fullName>
        <description>Level of priority of the campaign.  All tasks automatically generated for the campaign will have this priority.</description>
        <inlineHelpText>Level of priority of the campaign.  All tasks automatically generated for the campaign will have this priority.</inlineHelpText>
        <label>Campaign Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                    <color>#FF6666</color>
                </value>
                <value>
                    <fullName>Normal</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Core_Campaign_Target_Amount__c</fullName>
        <description>Target dollar amount to be achieved by campaign</description>
        <inlineHelpText>Target dollar amount to be achieved by campaign</inlineHelpText>
        <label>Campaign Target Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Core_Campaign_Target_Units__c</fullName>
        <description>Target number of units to be achieved by campaign</description>
        <inlineHelpText>Target number of units to be achieved by campaign</inlineHelpText>
        <label>Campaign Target Units</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Core_Cancelled_reason__c</fullName>
        <description>Provide free text reason if campaign is cancelled</description>
        <inlineHelpText>Provide free text reason if campaign is cancelled</inlineHelpText>
        <label>Cancel Reason</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Core_Clone_Sales_Campaign_Approve_Status__c</fullName>
        <description>Default value for default approval status</description>
        <formula>$Label.Core_Campaign_Default_Approval_Status</formula>
        <label>Clone Sales Campaign Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Clone_Sales_Campaign_Status__c</fullName>
        <description>Formula used for custom cloning</description>
        <formula>$Label.Core_Campaign_Default_Status</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Clone Sales Campaign Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_ICC_Campaign_ID__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <description>ID of the Campaign in Intel Customer Connect (ICC) Portal. ICC is the first place where marketing managers create the Campaign.</description>
        <label>ICC Campaign ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Sector__c</fullName>
        <description>Target Sector of the Campaign</description>
        <label>Sector</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Embedded</fullName>
                </value>
                <value>
                    <fullName>ITDM</fullName>
                </value>
                <value>
                    <fullName>Channel</fullName>
                </value>
                <value>
                    <fullName>Educator</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Core_SubSector__c</fullName>
        <description>Target SubSector of the Campaign</description>
        <label>SubSector</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ITDM-ESS</fullName>
                </value>
                <value>
                    <fullName>ITDM-WA</fullName>
                </value>
                <value>
                    <fullName>Retail Resellers</fullName>
                </value>
                <value>
                    <fullName>Retail Ecosystem</fullName>
                </value>
                <value>
                    <fullName>Intel Technology Provider</fullName>
                </value>
                <value>
                    <fullName>Intel Education</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Core_Target_Geo__c</fullName>
        <description>Target Geo(s) of the Campaign</description>
        <label>Target Geo</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APJ</fullName>
                </value>
                <value>
                    <fullName>ASMO</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>PRC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Core_Task_Batch_Job_ID__c</fullName>
        <description>Used by the batch processes that generate and delete tasks for Campaigns with many members</description>
        <label>Task Batch Job ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Task_Batch_Status__c</fullName>
        <description>Used by the batch processes that generate and delete tasks for Campaigns with many members</description>
        <label>Task Batch Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Generation Flagged to Start</fullName>
                </value>
                <value>
                    <fullName>Generation Started</fullName>
                </value>
                <value>
                    <fullName>Generation Complete</fullName>
                </value>
                <value>
                    <fullName>Generation Error</fullName>
                </value>
                <value>
                    <fullName>Deletion Flagged to Start</fullName>
                </value>
                <value>
                    <fullName>Deletion Started</fullName>
                </value>
                <value>
                    <fullName>Deletion Complete</fullName>
                </value>
                <value>
                    <fullName>Deletion Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Core_Tasks_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether or not tasks have already been generated en masse for this campaign, to prevent thousands of tasks being created multiple times for the same campaign by accident.</description>
        <label>Tasks Generated</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <recordTypes>
        <fullName>Core_Marketing_Campaign</fullName>
        <active>true</active>
        <description>Campaigns that are fed into the system from Eloqua</description>
        <label>Marketing Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>Core_Sales_Campaign</fullName>
        <active>true</active>
        <description>Campaigns created for Vendor Sales Center (VSC) usage</description>
        <label>Sales Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>Core_Sales_Campaign_Admin</fullName>
        <active>true</active>
        <description>Used for admin only</description>
        <label>Sales Campaign - Admin</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Core_Campaign_Only_Approved_In_Progress</fullName>
        <active>true</active>
        <description>Only allow Sales Campaigns that are approved to be set to status of In Progress</description>
        <errorConditionFormula>(RecordType.DeveloperName = &apos;Core_Sales_Campaign&apos;) &amp;&amp;
(ISCHANGED(Status) || ISNEW()) &amp;&amp;
(ISPICKVAL(Status, &apos;In Progress&apos;)) &amp;&amp;
(NOT(ISPICKVAL(Core_Approval_Status__c, &apos;Approved&apos;)))</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>Sales Campaigns must be approved before being set to &quot;In Progress&quot;</errorMessage>
    </validationRules>
</CustomObject>